# sparrowrpc-python

./: .gitignore  LICENSE  LICENSE.APACHE2  LICENSE.MIT  README.md  ROADMAP.md  generate_from_template_code.py  generate_micropython_package_json.py  micropython.md  package.json  pyproject.toml  tox.toml
demos/: async_tcp_client.py  async_tcp_client_raw.py  async_tcp_client_raw_perf.py  async_tcp_server.py  readme-client.py  readme-server.py  simple_threaded_tcp_client.py  simple_threaded_tcp_server.py  threaded_subprocess_child.py  threaded_subprocess_parent.py  threaded_tcp_client.py  threaded_tcp_client_raw.py  threaded_tcp_server.py
micropython/: abc.py  enum.py  micropython.md
micropython/uasync/: queues.py
src/lucido/: core.py  threaded.py
src/lucido/_template_/: __init__.py
src/lucido/_template_/transports/: __init__.py  websockets.py
src/lucido/asyncio/: __init__.py
src/lucido/asyncio/transports/: __init__.py  websockets.py
src/lucido/engines/: __init__.py  _jsonrpc2l.py  v050.py
src/lucido/serialisers/: __init__.py
src/lucido/threaded/: __init__.py  websockets.py
src/lucido/threaded/transports/: __init__.py  websockets.py
src/sparrowrpc/: __init__.py  bases.py  core.py  decorators.py  engine.py  exceptions.py  lib.py  messages.py  pyscript.py  registers.py  serialisers.py
src/sparrowrpc/_template_/: __init__.py
src/sparrowrpc/_template_/transports/: __init__.py  files.py  websockets.py
src/sparrowrpc/asyncio/: __init__.py
src/sparrowrpc/asyncio/transports/: __init__.py  files.py  websockets.py
src/sparrowrpc/encoders/: base.py  hs.py  v050.py
src/sparrowrpc/engines/: hs.py  jr2l.py  v050.py
src/sparrowrpc/serialisers/: __init__.py
src/sparrowrpc/threaded/: __init__.py
src/sparrowrpc/threaded/transports/: __init__.py  files.py  websockets.py
tests/: common_data.py  conftest.py  listening_server_code.py  listening_server_code_async.py  listening_server_code_threaded.py  listening_server_runner.py  test_async.py  test_sparrowrpc.py  test_threaded.py  threaded_listening_server_code.py  threaded_listening_server_runner.py
