[project]
name = "sparrowrpc"
description = "A Multi-Transport Peer-to-Peer bidirectional RPC System and Protocol Engine"
version = "0.1.0"
authors = [
 {name = "Rasjid Wilcox", email = "rasjidw@openminddev.net"}
]

dependencies = [
    "binarychain",
    'backports.strenum; python_version < "3.11"',
]

optional-dependencies.dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
]

optional-dependencies.websockets = [
    "websockets",
]

optional-dependencies.msgpack = [
    "msgpack",
]

optional-dependencies.cbor = [
    "cbor2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.coverage.run]
omit = [
    "src/sparrowrpc/_template_/*",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "module"
asyncio_default_test_loop_scope = "module"
